Don't commit samples

--- a/Unity/DrawnToConquer/.gitignore
+++ b/Unity/DrawnToConquer/.gitignore
@@ -12,6 +12,8 @@
 /Packages/com.projectdawn.navigation
 /Packages/com.rukhanka.animation
 /Assets/Shift - Complete Sci-Fi UI
+/Assets/Samples
+/Assets/Samples.meta
 
 
 # MemoryCaptures can get excessive in size.
